# notfellchen

./: .dockerignore  .gitignore  .woodpecker.yml  CHANGELOG.md  Dockerfile  README.md  notfellchen.cfg  package-lock.json  package.json  pyproject.toml
.woodpecker/: docs.yml  test.yml
docker/: build.cfg  notfellchen.bash
docs/: .woodpecker.yml  Dockerfile  README.md  conf.py  index.rst
docs/API/: index.rst
docs/_ext/: drawio.py
docs/admin/: GDPR.rst  example.telegraf.conf  index.rst  monitoring.rst
docs/dev/: backup.rst  contributing.rst  deployment.rst  index.rst  release.rst  translation.rst
docs/user/: Tiere-in-Vermittlung-entdecken.drawio.html  Vermittlung_Lifecycle.drawio.html  benachrichtigungen.rst  erste-schritte.rst  index.rst  moderationskonzept.rst  organisationen-pruefen.rst  registrierung.rst  tierschutzorganisation-hinzufuegen.rst  vermittlungen.rst
scripts/: extract_rescue_org_websites.py  upload_animal_shelters.py
src/: manage.py
src/fellchensammlung/: __init__.py  admin.py  animal_shelter.py  apps.py  baker_recipes.py  feeds.py  forms.py  mail.py  models.py  receivers.py  registration_views.py  sitemap.py  tasks.py  urls.py  views.py
src/fellchensammlung/api/: renderers.py  serializers.py  urls.py  views.py
src/fellchensammlung/aviews/: embeddables.py  helpers.py  urls.py
src/fellchensammlung/management/commands/: clean_locations.py  dedup_locations.py  export_contacts.py  mask_contact_data.py  populate_db.py  print-settings.py  query_location.py  sync_to_twenty.py
src/fellchensammlung/migrations/: 0001_initial.py  0002_basenotification_commentnotification.py  0002_comment.py  0002_remove_animal_adoption_notice_adoptionnotice_animals.py  0002_rename_markdowncontent_text.py  0002_rule.py  0003_alter_text_options.py  0003_markdowncontent.py  0003_remove_image_uploaded_by.py  0003_remove_report_adoption_notice_and_more.py  0003_subscriptions.py  0004_alter_animal_sex.py  0004_alter_report_reported_broken_rules.py  0004_alter_text_options.py  0004_image_adoptionnotice_photos_animal_photos.py  0004_rename_created_by_adoptionnotice_owner_and_more.py  0005_alter_text_content_alter_text_language_and_more.py  0005_animal_sex.py  0005_announcement.py  0005_report_moderationaction.py  0005_rescueorganization_allows_using_materials_and_more.py  0006_adoptionnotice_last_checked.py  0006_alter_animal_date_of_birth.py  0006_alter_moderationaction_action.py  0006_alter_text_language.py  0006_announcement_type.py  0007_alter_adoptionnotice_last_checked.py  0007_alter_moderationaction_private_comment_and_more.py  0007_remove_location_country_remove_location_description_and_more.py  0008_alter_adoptionnoticestatus_minor_status_and_more.py  0008_remove_location_osm_id.py  0009_log.py  0009_remove_image_title.py  0010_status.py  0010_timestamp.py  0011_adoptionnotice_status.py  0011_alter_adoptionnotice_created_at_and_more.py  0012_adoptionnotice_updated_at_and_more.py  0013_alter_log_user.py  0014_rescueorganization_email.py  (+60 more)
src/fellchensammlung/static/: robots.txt  rss.xsl
src/fellchensammlung/templates/fellchensammlung/: about.html  add_adoption.html  animal-shelters.html  base.html  base_bulma.html  base_generic.html  bulma-about.html  bulma-animal-shelters.html  bulma-external_site_warning.html  bulma-footer.html  bulma-header.html  bulma-index.html  bulma-map.html  bulma-one-text.html  bulma-search.html  bulma-styleguide.html  bulma-terms-of-service.html  contacts.vcf  detail-animal-partial.html  detail-report.html  detail_adoption_notice.html  map.html  (+26 more)
src/fellchensammlung/templatetags/: custom_tags.py
src/fellchensammlung/tools/: admin.py  fedi.py  geo.py  i18n.py  img.py  metrics.py  misc.py  model_helpers.py  notifications.py  search.py  signals.py  twenty.py
src/notfellchen/: __init__.py  asgi.py  celery.py  main.py  settings.py  urls.py  wsgi.py
src/templates/django_registration/: activate.html  activation_complete.html  activation_email_body.txt  activation_email_subject.txt  activation_failed.html  activation_form.html  registration_closed.html  registration_complete.html  registration_form.html
src/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirmation.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
src/tests/: test_admin_tasks.py  test_forms.py  test_geo.py  test_misc.py  test_models.py  test_search.py  test_tools_notifications.py  test_views.py
src/tests/test_views/: test_advanced_views.py  test_basic_views.py  test_search.py  test_user_views.py
(+137 files in other folders)
