[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "notfellchen"
description = "A tool to help."
authors = [
    { name = "moanos", email = "julian-samuel@gebuehr.net" },
]
maintainers = [
    { name = "moanos", email = "julian-samuel@gebuehr.net" },
]
keywords = ["animal", "adoption", "django", "rescue", ]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Environment :: Web",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
]
dependencies = [
    "Django",
    "codecov",
    "sphinx",
    "sphinx-rtd-theme",
    "gunicorn",
    "fontawesomefree",
    "whitenoise",
    "markdown",
    "Pillow",
    "django-registration",
    "psycopg2-binary",
    "django-crispy-forms",
    "crispy-bootstrap4",
    "djangorestframework",
    "celery[redis]",
    "drf-spectacular[sidecar]"
]

dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "pytest",
    "coverage",
    "model_bakery",
]

[project.urls]
homepage = "https://notfellchen.org"
repository = "https://codeberg.org/moanos/notfellchen/"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nf = 'notfellchen.main:main'


[tool.setuptools.dynamic]
version = { attr = "notfellchen.__version__" }
readme = { file = "README.md" }

