[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "notfellchen"
description = "A website to help animals to find a loving home. It features organized input of adoption notices and related animals including automated lifecycle, location-based search, roles, and support for easy checking of rescue organizations."
authors = [
    { name = "moanos", email = "julian-samuel@gebuehr.net" },
]
maintainers = [
    { name = "moanos", email = "julian-samuel@gebuehr.net" },
]
keywords = ["animal", "adoption", "django", "rescue", "rats" ]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Environment :: Web",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
]
dependencies = [
    "Django",
    "codecov",
    "gunicorn",
    "fontawesomefree",
    "whitenoise",
    "markdown",
    "Pillow",
    "django-registration",
    "psycopg2-binary",
    "django-crispy-forms",
    "crispy-bootstrap4",
    "djangorestframework",
    "celery[redis]",
    "drf-spectacular[sidecar]",
    "django-widget-tweaks",
    "django-super-deduper",
    "django-allauth[mfa]",
    "django_debug_toolbar",
]

dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "pytest",
    "coverage",
    "model_bakery",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild"
]

[project.urls]
homepage = "https://notfellchen.org"
repository = "https://codeberg.org/moanos/notfellchen/"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nf = 'notfellchen.main:main'


[tool.setuptools.dynamic]
version = { attr = "notfellchen.__version__" }
readme = { file = "README.md" }

